5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4011/executions/1798_2563.log
== TEST (2019-06-12 04:59:04) 
-- CODE:
from numpy import*

nota = array(eval(input("Nota dos alunos: ")))
monit = 0

for x in nota:
	if (nota >= 5 and nota < 7):
		monit = monit + 1

	print(monit)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 05:00:24) 
-- CODE:
from numpy import*

nota = array(eval(input("Nota dos alunos: ")))

for x in nota:
	monit = 0 
	
	if (nota >= 5 and nota < 7):
		monit = monit + 1

	print(monit)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 05:04:32) 
-- CODE:
from numpy import*

nota = array(eval(input("Nota dos alunos: ")))

for x in nota:
	monit = 0 
	
	if (nota >= 5) and (nota < 7):
		monit = monit + 1

	print(monit)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 05:05:59) 
-- CODE:
from numpy import*

nota = array(eval(input("Nota dos alunos: ")))

for x in range(size(nota)):
	monit = 0 
	
	if (x >= 5) and (x < 7):
		monit = monit + 1

	print(monit)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 05:06:25) 
-- CODE:
from numpy import*

nota = array(eval(input("Nota dos alunos: ")))

for x in range(size(nota)):
	monit = 0 
	
	if (x >= 5) and (x < 7):
		monit = monit + 1
		print(monit)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 05:09:57) 
-- CODE:
from numpy import*

nota = array(eval(input("Nota dos alunos: ")))

while (size(nota) > x)
for x in range(size(nota)):
	monit = 0 
	
	if (x >= 5) and (x < 7):
		monit = monit + 1
		print(monit)
-- ERROR:
File "XXXX", line 5
    while (size(nota) > x)
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 05:10:07) 
-- CODE:
from numpy import*

nota = array(eval(input("Nota dos alunos: ")))

while (size(nota) > x):
for x in range(size(nota)):
	monit = 0 
	
	if (x >= 5) and (x < 7):
		monit = monit + 1
		print(monit)
-- ERROR:
File "XXXX", line 6
    for x in range(size(nota)):
      ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 05:18:48) 
-- CODE:
from numpy import*

nota = array(eval(input("Nota dos alunos: ")))

while (size(nota) > x):
	monit = 0
	
	for x in range(size(nota)):
		if (x >= 5) and (x < 7):
		monit = monit + 1
		print(monit)
	
	nota = array(eval(input("Nota dos alunos: ")))
-- ERROR:
File "XXXX", line 10
    monit = monit + 1
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 05:20:47) 
-- CODE:
from numpy import*

nota = array(eval(input("Nota dos alunos: ")))
monit = 0

while (size(nota) > x):
	
	for x in range(size(nota)):
		if (x >= 5) and (x < 7):
			monit = monit + 1
			print(monit)
	
	nota = array(eval(input("Nota dos alunos: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 05:21:29) 
-- CODE:
from numpy import*

nota = array(eval(input("Nota dos alunos: ")))
monit = 0

while (size(nota) > 1):
	
	for x in range(size(nota)):
		if (x >= 5) and (x < 7):
			monit = monit + 1
			print(monit)
	
	nota = array(eval(input("Nota dos alunos: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 05:22:01) 
-- CODE:
from numpy import*

nota = array(eval(input("Nota dos alunos: ")))
monit = 0

while (size(nota) > 1):
	
	for x in range(size(nota)):
		if (x >= 5) and (x < 7):
			monit = monit + 1
			print(monit)
		
		nota = array(eval(input("Nota dos alunos: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 05:22:41) 
-- CODE:
from numpy import*

nota = array(eval(input("Nota dos alunos: ")))
monit = 0

while (size(nota) > 1):
	
	for x in range(size(nota)):
		if (x >= 5) and (x < 7):
			monit = monit + 1
			print(monit)
		
			nota = array(eval(input("Nota dos alunos: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 05:23:03) 
-- CODE:
from numpy import*

nota = array(eval(input("Nota dos alunos: ")))
monit = 0

while (size(nota) > 1):
	
	for x in range(size(nota)):
		if (x >= 5) and (x < 7):
			monit = monit + 1
		
		print(monit)
		
			nota = array(eval(input("Nota dos alunos: ")))
-- ERROR:
File "XXXX", line 14
    nota = array(eval(input()))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 05:23:42) 
-- CODE:
from numpy import*

nota = array(eval(input("Nota dos alunos: ")))
monit = 0

while (size(nota) > 1):
	
	for x in range(size(nota)):
		if (x >= 5) and (x < 7):
			monit = monit + 1
			nota = array(eval(input("Nota dos alunos: ")))
		
		print(monit)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 05:24:58) 
-- CODE:
from numpy import*

nota = array(eval(input("Nota dos alunos: ")))
monit = 0

while (size(nota) > 1):
	
	for x in range(size(nota)):
		if (x >= 5) and (x < 7):
			monit = monit + 1
			nota = array(eval(input("Nota dos alunos: ")))
		
	print(monit)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 05:27:23) 
-- CODE:
from numpy import*

nota = array(eval(input("Nota dos alunos: ")))
monit = 0

while (size(nota) > 1):
	
	for x in range(size(nota)):
		if (x >= 5) and (x < 7):
			monit = monit + 1
			print(monit)
	
	nota = array(eval(input("Nota dos alunos: ")))
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 05:28:00) 
-- CODE:
from numpy import*

nota = array(eval(input("Nota dos alunos: ")))
monit = 0

while (size(nota) > 1):
	
	for x in range(size(nota)):
		if (x >= 5) and (x < 7):
			monit = monit + 1
	
	nota = array(eval(input("Nota dos alunos: ")))

print(monit)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 05:28:46) 
-- CODE:
from numpy import*

nota = array(eval(input("Nota dos alunos: ")))
monit = 0

while (size(nota) > 1):
	
	for x in range(size(nota)):
		if (x >= 5) and (x < 7):
			monit = monit + 1
	
	nota = array(eval(input("Nota dos alunos: ")))
	print(monit)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 08:37:56) 
-- CODE:
from numpy import*

nota = array(eval(input("Nota dos alunos: ")))
monit = 0

while (size(nota) > 1):
	
	for x in range(size(nota)):
		if (x >= 5) and (x < 7):
			monit = monit + 1
	
	nota = array(eval(input("Nota dos alunos: ")))
	print(monit)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 08:41:45) 
-- CODE:
from numpy import*

nota = array(eval(input("Nota dos alunos: ")))
monit = 0

for x in range(size(nota)):
	if (x >= 5) and (x < 7):
		monit = monit + 1
	
	nota = array(eval(input("Nota dos alunos: ")))
print(monit)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 08:48:24) 
-- CODE:
from numpy import*

nota = array(eval(input("Nota dos alunos: ")))

for x in nota:
	monit = 0
	
	if (x >= 5) and (x < 7):
		monit = monit + 1
	
	nota = array(eval(input("Nota dos alunos: ")))

print(monit)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 08:49:32) 
-- CODE:
from numpy import*

nota = array(eval(input("Nota dos alunos: ")))

for x in nota:
	monit = 0
	
	if (x >= 5) and (x < 7):
		monit = monit + 1
	
	print(monit)
	nota = array(eval(input("Nota dos alunos: ")))


		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 08:50:34) 
-- CODE:
from numpy import*

nota = array(eval(input("Nota dos alunos: ")))

while(nota)
	for x in nota:
		monit = 0
	
		if (x >= 5) and (x < 7):
			monit = monit + 1
	
		print(monit)
		nota = array(eval(input("Nota dos alunos: ")))


		
-- ERROR:
File "XXXX", line 5
    while(nota)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 08:51:11) 
-- CODE:
from numpy import*

nota = array(eval(input("Nota dos alunos: ")))

while(size(nota)>1):
	for x in nota:
		monit = 0
	
		if (x >= 5) and (x < 7):
			monit = monit + 1
	
		print(monit)
		nota = array(eval(input("Nota dos alunos: ")))


		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 08:51:13) 
-- CODE:
from numpy import*

nota = array(eval(input("Nota dos alunos: ")))

while(size(nota)>1):6
	for x in nota:
		monit = 0
	
		if (x >= 5) and (x < 7):
			monit = monit + 1
	
		print(monit)
		nota = array(eval(input("Nota dos alunos: ")))


		
-- ERROR:
File "XXXX", line 6
    for x in nota:
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 08:51:22) 
-- CODE:
from numpy import*

nota = array(eval(input("Nota dos alunos: ")))

while(size(nota)>1):
	
	for x in nota:
		monit = 0
	
		if (x >= 5) and (x < 7):
			monit = monit + 1
	
		print(monit)
		nota = array(eval(input("Nota dos alunos: ")))


		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 09:22:51) 
-- CODE:
from numpy import*

medias = array(eval(input()))

while (size(medias)>1):
	ap = 0
	for i in medias:
		if (i>=5 and i<7):
			ap+=1
	print(ap)
	medias = array(eval(input()))
-- EXECUTION TIME:
0.997927
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
